<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_messages"
        app:showAsAction="ifRoom"
        android:title="@string/view_messages"
        android:icon="@drawable/ic_message"/>

    <item
        android:id="@+id/menu_events"
        app:showAsAction="ifRoom"
        android:title="@string/view_events"
        android:icon="@drawable/ic_event"/>

    <item
        android:id="@+id/menu_shifts"
        app:showAsAction="ifRoom"
        android:title="@string/view_shifts"
        android:icon="@drawable/ic_shift"/>

    <item
        android:id="@+id/menu_sync"
        app:showAsAction="never"
        android:title="@string/menu_sync"
        android:icon="@drawable/ic_sync"/>

    <item
        android:id="@+id/menu_logout"
        app:showAsAction="never"
        android:title="@string/menu_logout"
        android:icon="@drawable/ic_logout"/>
</menu>